# aero-hand-open_websockets

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  README.md  README_en.md  README_zh.md  签名信息_2026-04-03.txt
.github/workflows/: build.yml  firmware_release.yml  release.yml
aero_ws_python/: README.md  __init__.py  pyproject.toml  requirements.txt  server.py
aero_ws_python/tests/: __init__.py  test_protocol.py
android/: README.md  gradlew  gradlew.bat  keystore.properties.example  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aerohand/: MainActivity.kt
android/app/src/main/java/com/aerohand/gesture/: FingerAngles.kt  GestureCameraPanel.kt  GestureCameraService.kt
android/app/src/main/java/com/aerohand/ui/components/: ControlComponents.kt
android/app/src/main/java/com/aerohand/ui/pages/: ControlPages.kt  GestureFollowPage.kt
android/app/src/main/java/com/aerohand/ui/screens/: HandControlScreen.kt
android/app/src/main/java/com/aerohand/ui/theme/: Theme.kt
android/app/src/main/java/com/aerohand/usb/: UsbSerialService.kt
android/app/src/main/java/com/aerohand/viewmodel/: HandControlViewModel.kt
android/app/src/main/java/com/aerohand/websocket/: Protocol.kt  WebSocketService.kt
android/app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_foreground.xml
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
android/app/src/main/res/values/: colors.xml  themes.xml
android/app/src/main/res/xml/: device_filter.xml  network_security_config.xml
c_dll/: CMakeLists.txt  README.md
c_dll/examples/: csharp_example.cs  python_wrapper.py
c_dll/include/: aero_ws.h  aero_ws_internal.h
c_dll/src/: aero_ws.c
docs/: README.md  固件版本分析.md
esp32_firmware/aero_hand_wifi/: HLSCL.h  Homing.h  README.md  aero_hand_wifi.ino  config.h  servoControl.cpp  servoControl.h
esp32_wifi/firmware/aero_hand_wifi/: HLSCL.cpp  HLSCL.h  Homing.cpp  Homing.h  README.md  SCS.cpp  SCS.h  SCSerial.h  aero_hand_wifi.ino  config.h  partitions.csv  servoControl.cpp  servoControl.h  webSocketServer.cpp  webSocketServer.h
esp32_wifi/web_client/: html_client.html
firmware_src/v0.1.0/: Homing.cpp  firmware.ino
firmware_src/v0.1.3/: firmware.ino
firmware_src/v0.1.4/: Homing.cpp  firmware.ino
firmware_src/v0.1.5/: Homing.cpp  firmware.ino
firmware_ws/: README.md  config.h  generate_ws_firmware.py
firmware_ws/lib/: webSocketServer.cpp  webSocketServer.h
firmware_ws/v0.1.0/: HandConfig.h  firmware.ino  webSocketServer.cpp
firmware_ws/v0.1.3/: firmware.ino  webSocketServer.cpp  webSocketServer.h
firmware_ws/v0.1.4/: Homing.h  firmware.ino
firmware_ws/v0.1.5/: firmware.ino
firmware_ws/v0.2.0/: Homing.cpp  config.h  firmware.ino  webSocketServer.h
firmware_ws_build/: build_versions.py
protocol/: CONTROL_PROTOCOL.md
python_bridge/: README.md  pyproject.toml  requirements.txt
python_bridge/aero_ws_python/: __init__.py  client.py  protocol.py  server.py
python_bridge/examples/: connection_test.py  interactive_test.py  test_client.py
python_bridge/tests/: __init__.py  test_client_server_integration.py  test_protocol.py
scripts/: build_versions.py
